Bug 151849 - Find-and-replace shortcut becomes keyboard-layout-sensitive in find bar
Summary: Find-and-replace shortcut becomes keyboard-layout-sensitive in find bar
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: All Linux (All)
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:26.8.0 target:26.2.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Find-Search Shortcuts-Locale Find&Replace-Dialog
  Show dependency treegraph
 
Reported: 2022-10-31 21:18 UTC by Eyal Rozenberg
Modified: 2026-01-08 17:58 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eyal Rozenberg 2022-10-31 21:18:46 UTC
I'm using LO Writer with Hebrew and English keyboard layouts.

Usually, pressing Ctrl+H opens the Find & Replace dialog - even if my keyboard layout is Hebrew (i.e. Ctrl+י - the Hebrew letter Yod, _not_ a single quote). But if my cursor is in the find bar textbox - Ctrl+H works, and Ctrl+י doesn't work.



Version: 7.4.1.2 / LibreOffice Community
Build ID: 40(Build:2)
CPU threads: 4; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: en-IL (en_IL); UI: en-US
Debian package version: 1:7.4.1-1
Comment 1 Heiko Tietze 2022-11-07 09:52:49 UTC
Ctrl+H works for me in all situations.

Version: 7.4.2.3 / LibreOffice Community
Build ID: 40(Build:3)
CPU threads: 8; OS: Linux 6.0; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (en_US.UTF-8); UI: en-US
7.4.2-2
Calc: threaded
Comment 2 Eyal Rozenberg 2022-11-07 10:29:06 UTC
(In reply to Heiko Tietze from comment #1)
> Ctrl+H works for me in all situations.

Could it be a gtk3 issue?
Comment 3 Heiko Tietze 2022-11-09 10:26:25 UTC
(In reply to Eyal Rozenberg from comment #2)
> Could it be a gtk3 issue?

Same with 

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2f5996e7b54881c3c1b96e9fd39c4df3dbb75238
CPU threads: 8; OS: Linux 6.0; UI render: default; VCL: gtk3
Locale: de-DE (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 4 Dieter 2023-11-21 08:23:47 UTC
Egal, is the bug still reproducible for you with actual master?
=> NEEDINFO
Comment 5 Eyal Rozenberg 2023-11-24 20:43:39 UTC
(In reply to Dieter from comment #4)
> Egal, is the bug still reproducible for you with actual master?

Problem persists with:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3161a6c351a2f5f70c0420ee8cccf2eb23de1ecf
CPU threads: 4; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: he-IL (en_IL); UI: en-US

from about 6 weeks ago.
Comment 6 QA Administrators 2023-11-25 03:15:38 UTC Comment hidden (obsolete)
Comment 7 Buovjaga 2025-12-17 12:00:46 UTC
I added Hebrew layout and could reproduce with it when doing Ctrl+H while focused in the Quick Find bar.

Bibisected with linux-64-7.1 to 36d14442b25bd3d700d95879e5775cce6ed0836d
tdf#137993 ensure the toplevel vcl::Window is activated
Comment 8 Caolán McNamara 2025-12-17 21:35:50 UTC
I wavered between impossible and doable for a while, but https://gerrit.libreoffice.org/c/core/+/195814 should do the same "right thing" that the main widget does which is apparently sufficient, and does work for me for this case.
Comment 9 Commit Notification 2025-12-18 08:25:45 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d40fb8ade1380fc34844e7bda7a6e335807ee5c6

Resolves: tdf#151849 use convoluted find-latin keygroup for accelerators

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Buovjaga 2025-12-18 11:23:54 UTC
Verified, thanks

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 68f8ddc15323bd67dff022766800cbcf11fdf370
CPU threads: 8; OS: Linux 6.17; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Comment 11 Commit Notification 2026-01-08 17:58:50 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/bcbf170e31f66c872604ded334fc6a0d3739522f

Resolves: tdf#151849 use convoluted find-latin keygroup for accelerators

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.