Resolves: tdf#151849 use convoluted find-latin keygroup for accelerators

for native gtk widget keyevent handlers, same as the toplevel widget
uses, so Ctrl+יworks like Ctrl+h. None of this is portable to gtk4
I think.

Change-Id: Ia4f350c1b726abf8ba98fbb66177f27c0f988a30
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195814
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins